--- a/package.json
+++ b/package.json
@@ -10,15 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
     "@tabler/icons-react": "^2.40.0",
-    "@tanstack/react-query": "^5.7.0",
+    "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.0",
     "lucide-react": "^0.292.0",
+    "mermaid": "^10.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-epic-spinners": "^0.5.0",
+    "react-markdown": "^9.0.0",
+    "react-spinners": "^0.13.8",
+    "rehype-highlight": "^7.0.0",
+    "rehype-react": "^8.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
+    "unified": "^11.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
