--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
+    "react-markdown": "^9.0.0",
     "react-spinners": "^0.13.8",
     "zod": "^3.22.4"
   },
